# LumpacView

./: .gitignore  CMakeLists.txt  Lumpac-allIsomers.txt  LumpacView-inputPermutation.txt  LumpacViewInput.txt  README.txt  ROCTAF-cloro-coord-6-carga-0.xyz  btfa.xyz  dbm.xyz  h2o-bidentate.xyz  h2o-monodentate.xyz  h2o-tridentate.xyz  h2o.xyz  hardin12.txt  hardin12.txt.xyz  hardin6.txt  hardin6.txt.xyz  initialComplexBeforeAnnealing.xyz  itpy.xyz  point.txt  script-run-flag-pc  spk_Gd.inp  tppo-tridentate.xyz  tppo.xyz  tta-tridentate-test.xyz  tta.xyz  xyzTeste.xyz
data/: GEO-10-Maaaaaaaaaa.csv  mudancas.txt  notas.txt  skeleton-6
data/allIsomers/: allIsomers-7.txt  allIsomers-8.txt  allIsomers-9.txt
data/distribuicao-dos-angulos/: 10.csv  11.csv  12.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
data/fred-pontos/: fred10.txt  (+7 more)
src/: AdjustSaParameters.cpp  AdjustSaParameters.h  AllMolecularFormulas.cpp  AllMolecularFormulas.h  AuxMath.cpp  AuxMath.h  AuxMathGa.cpp  BestPermutation.cpp  BestPermutation.h  BuildComplex.cpp  BuildComplex.h  CauchyIndex.cpp  CauchyIndex.h  ChangeNames.cpp  ChangeNames.h  Combinations.cpp  Combinations.h  ComplexCreator.cpp  ComplexCreator.h  ControlMopac.cpp  ControlMopac.h  DiagonalizeDlib.cpp  DoAllPermutations.cpp  DoAllPermutations.h  EnantiomerIdentification.cpp  EnantiomerIdentification.h  FindIsomers.cpp  FindIsomers.h  Fitness.cpp  Fitness.h  Geometries.cpp  Geometries.h  GroupPointIdentify.cpp  GroupPointIdentify.h  IdentifyIsomers.cpp  IdentifyIsomers.h  IsomersToMol.cpp  IsomersToMol.h  KabschRmsd.cpp  KabschRmsd.h  (+23 more)
(+87 files in other folders)
